# opal

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  azure_openai_config.txt  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: mcp.md  opal_contract.md
mcp/: __init__.py  manifest.json  server.py
src/opal/: api.py  controls.py  events.py  negotiation.py
src/opal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/opal/llm/: __init__.py  explain.py
src/opal/mcp/: manifest.json  server.py
src/opal/ml/: __init__.py  value_scoring.py
tests/: test_api.py  test_controls.py  test_enhanced_wallet_choice.py  test_mcp_smoke.py  test_negotiation.py
tests/fixtures/: approved_selection.json  declined_channel_limit.json  declined_high_risk.json  pos_high_limit.json
