[project]
name = "opal"
version = "0.2.0"
description = "OCN opal"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="Ahsan Azmi"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "ocn-common @ git+https://github.com/ahsanazmi1/ocn-common.git@v0.2.0#egg=ocn-common"
]

[project.optional-dependencies]
dev = ["pytest>=8", "coverage", "ruff", "black", "mypy"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped defs for now
exclude = [
    "src/opal/mcp/",  # Exclude the existing MCP server directory that uses external MCP package
    "tests/"  # Exclude test files from strict typing
]
